<resources>
    <string name="app_name">TOOLBOX</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back">back to main menu</string>
    <string name="connect_reader_menu_item_text">Connect Reader menu item</string>
    <string name="disconnect_reader_menu_item_text">Disconnect reader menu item</string>
    <string name="change_reader_menu_item_text">Change reader menu item text</string>
    <string name="company_information">Company information</string>
    <string name="name">NAME</string>
    <string name="street">STREET</string>
    <string name="zip_city">ZIP CITY</string>
    <string name="country">COUNTRY</string>
    <string name="phone">PHONE</string>
    <string name="mail">MAIL</string>
    <string name="app_information">App Information</string>
    <string name="version">Version:</string>
    <string name="date">Date:</string>
    <string name="new_value">New Value</string>
    <string name="barcode">Barcode:</string>
    <string name="description">Description:</string>
    <string name="price">Price:</string>
    <string name="picture">Picture:</string>
    <string name="application_settings">Application settings</string>
    <string name="barcode_information">Barcode Information</string>
    <string name="function_is_active">Function is active</string>
    <string name="show_description">Show Description</string>
    <string name="show_prices">Show Prices</string>
    <string name="show_pictures">Show Pictures</string>
    <string name="show_barcode_type">Show barcode type</string>
    <string name="show_number_of_digits">Show number of digits</string>
    <string name="barcode_comparison">Barcode comparison</string>
    <string name="master_data">Master Data</string>
    <string name="manage_prices">Manage Prices</string>
    <string name="scan_mastercode">Scan Mastercode:</string>
    <string name="scan_barcode">Scan Barcode:</string>
    <string name="masterdata">Masterdata</string>
    <string name="comparison_of_barcode_contents">Comparison of barcode contents</string>
    <string name="data_acquisition">Data Acquisition</string>
    <string name="save_barcode_data_in_csv">Save barcode data in CSV</string>
    <string name="label_printing">Label Printing</string>
    <string name="print_barcodelabel">Print barcodelabel</string>
    <string name="custom_function">Custom Function</string>
    <string name="custom_settings">Custom Settings</string>
    <string name="field_1">Field 1</string>
    <string name="fieldtype">Fieldtype:</string>
    <string name="fieldname">Fieldname:</string>
    <string name="quantity_field">Quantity field</string>
    <string name="allow_duplicate_codes">Allow duplicate codes</string>
    <string name="separator">Separator:</string>
    <string name="file_format">File format:</string>
    <string name="enter_filename">Enter filename:</string>
    <string name="filename">Filename:</string>
    <string name="counter">Counter</string>
    <string name="last_barcode">Last Barcode:</string>
    <string name="list">List:</string>
    <string name="quantity">Quantity</string>
    <string name="print">print</string>
    <string name="menu_masterdata">Masterdata</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_file_upload">File Upload</string>
    <string name="menu_language">Language</string>
    <string name="menu_about">About</string>
    <string name="menu_barcode_settings">Barcode Settings</string>
    <string name="menu_application_settings">Application Settings</string>
    <string name="menu_custom_settings">Custom Settings</string>
    <string name="title_about">About</string>
    <string name="licencedialog_enter_licence_key">Enter Licence Key</string>
    <string name="barcode_label">Barcode label</string>
    <string name="print_barcodetype">Print barcodetype</string>
    <string name="last_item">Last item</string>
</resources>
